# thingy-91_accel-server

./: .gitignore  CMakeLists.txt  README.md  cbor_callback1.c  cbor_callback1.h  server.c  shared.c  shared.h
